# CloudNativeGIS

./: .editorconfig  .envrc  .exrc  .flake8  .gitignore  .gitmodules  .nvim.lua  .pre-commit-config.yaml  .tailor.yml  404.html  MANIFEST.in  Makefile  README.md  flake.nix  index.html  justfile  maputnik_html_to_django.py  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: BuildMKDocsAndPublishToGithubPages.yml  mkdocs.yml  release.yaml  tests.yaml
.reuse/: dep5
.run/: DJANGO+REACT.run.xml  Run Server.run.xml  serve.run.xml
None/: index.html
administrator/: index.html
administrator/configuration/: index.html
administrator/deployment/: index.html
administrator/maintenance/: index.html
deployment/: .template.env  docker-compose.override.devcontainer.yml  docker-compose.override.template.yml  docker-compose.test.yml  docker-compose.yml
deployment/docker/: Dockerfile  requirements-dev.txt  requirements.txt  uwsgi.conf
deployment/nginx/sites-enabled/: default.conf
developer/: index.html
developer/manual/: index.html
django_project/: __init__.py  entrypoint.sh  initialize.py  manage.py  webpack_serve.sh
django_project/cloud_native_gis/: apps.py  pagination.py  tasks.py  urls.py
django_project/cloud_native_gis/admin/: __init__.py  general.py  layer.py  style.py
django_project/cloud_native_gis/api/: base.py  context.py  layer.py  layer_download.py  pmtile.py  raster.py  vector_tile.py
django_project/cloud_native_gis/api/pygeoapi/: base.py  collections.py  items.py  landing.py  urls.py
django_project/cloud_native_gis/forms/: __init__.py  file.py  layer.py  style.py
django_project/cloud_native_gis/management/commands/: generate_pygeoapi_openapi.py
django_project/cloud_native_gis/maputnik/: index.html
django_project/cloud_native_gis/maputnik/assets/: index-B7ypWbQA.js  index-BFQdBSqC.css  index-Cm8ZtJ1I.js  index-DvofjCiq.js  index-v8ZkhupJ.css
django_project/cloud_native_gis/migrations/: 0001_initial.py  0002_layer_pmtile.py  0003_layerdownload.py  0004_layer_extent.py  __init__.py
django_project/cloud_native_gis/models/: __init__.py  general.py  layer.py  layer_download.py  layer_upload.py  style.py
django_project/cloud_native_gis/serializer/: general.py  layer.py  layer_download.py  layer_upload.py  style.py
django_project/cloud_native_gis/static/cloud_native_gis/: index-B0lnBb3A.js  index-CHkHdgsP.js  index-DOQppmRT.js  index-DRZ64yjZ.js  index-DW0d2Ij5.css  index-Q6o3hf_z.js  index-yKDiDp5s.js
django_project/cloud_native_gis/templates/cloud_native_gis/: maputnik.html
django_project/cloud_native_gis/templates/pygeoapi/: _base.html  landing_page.html
django_project/cloud_native_gis/tests/: __init__.py  base.py  layer_form.py  runner.py
django_project/cloud_native_gis/tests/_fixtures/: __init__.py
django_project/cloud_native_gis/tests/api/: __init__.py  context.py  layer.py  layer_download.py  pmtile.py
django_project/cloud_native_gis/tests/model_factories/: __init__.py  user.py
django_project/cloud_native_gis/tests/models/: __init__.py  layer.py  layer_download.py
django_project/cloud_native_gis/utils/: connection.py  fiona.py  geometry.py  geopandas.py  layer.py  main.py  pygeoapi_config.py  range_request.py  type.py  vector_tile.py
django_project/context_layer/: apps.py  urls.py
django_project/context_layer/admin/: layer.py
django_project/context_layer/api/: base.py  layer.py  vector_tile.py
django_project/context_layer/forms/: __init__.py  layer.py
django_project/context_layer/migrations/: 0001_initial.py
django_project/context_layer/models/: __init__.py  general.py  layer.py
django_project/context_layer/serializer/: layer.py
django_project/context_layer/tests/: __init__.py  layer_form.py  runner.py
django_project/context_layer/utils/: connection.py  geopandas.py  main.py  vector_tile.py
django_project/context_layer_command/: __init__.py
django_project/context_layer_management/: apps.py  tasks.py  urls.py
django_project/context_layer_management/admin/: __init__.py  layer.py  style.py
django_project/context_layer_management/api/: base.py  layer.py  vector_tile.py
django_project/context_layer_management/forms/: file.py  layer.py  style.py
django_project/context_layer_management/migrations/: 0001_initial.py
django_project/context_layer_management/models/: __init__.py  general.py  layer.py  layer_upload.py  style.py  style_defaults.py
django_project/context_layer_management/serializer/: layer.py  style.py
django_project/context_layer_management/tests/: base.py  layer_form.py  runner.py
django_project/context_layer_management/utils/: connection.py  geopandas.py  layer.py  main.py  vector_tile.py
django_project/core/: asgi.py  celery.py  context_processors.py  urls.py  wsgi.py
django_project/core/settings/: app.py  base.py  contrib.py  dev.py  prod.py  project.py  test.py  utils.py
django_project/frontend/: apps.py  package.json  tsconfig.json  urls.py  views.py  webpack.config.js
django_project/frontend/src/: App.test.js  App.tsx  Home.tsx  index.js
django_project/frontend/templates/: base.html  home.html
django_project/tenants/: __init__.py  admin.py  models.py
django_project/tenants/migrations/: 0001_initial.py
docs/: .gitignore  create-mkdocs-html-config.sh  mkdocs-base.yml  mkdocs-html.yml  mkdocs-pdf.yml  requirements.txt
docs/src/: index.md  quick_installation.md
docs/src/administrator/: configuration.md  deployment.md  index.md  maintenance.md
docs/src/developer/: index.md
docs/src/user/: getting-started.md  index.md  layers.md  styles.md
docs/templates/: cover.html
playwright/ci-test/: base-url.sh  playwright.config.ts
playwright/ci-test/tests/: auth.setup.ts  landingPage.spec.ts
playwright/staging-tests/: base-url.sh
playwright/staging-tests/tests/: test.spec.ts
quick_installation/: index.html
search/: search_index.json
user/: index.html
user/getting-started/: index.html
user/layers/: index.html
user/styles/: index.html
(+15 files in other folders)
